--- a/onas.html
+++ b/onas.html
@@ -13,7 +13,7 @@ body
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(5%, auto);
     margin-left: 5%;
     }
   
