--- a/onas.html
+++ b/onas.html
@@ -262,6 +262,11 @@ div.opis {
 .sekcja {
   background-image: url("tlo.png");
 }
+.person-box2 {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 20px;
+}
 </style>
 
 </head>
@@ -302,11 +307,11 @@ Poznaj członków partii D3SIGN 3! Jesteśmy pozytywnymi, chętnymi do działani
 <div class="haslo">
 <p style="color:#ff002a">Zarząd Partii D3SIGN 3</p>
 </div>
-  <div class ="person-box">
+  <div class ="person-box2">
      <div class="osoba">
          <img src="person.webp"></img>
          <div class="stanowisko">Przewodniczący Partii</div>
-         <div class="opis">Imię<br><b>Nazwisko</b></div>
+         <div class="opis">Aleksandra<br><b>Filipowska</b></div>
     </div>
     <div class="osoba">
       <img src="person.webp"></img>
@@ -321,7 +326,7 @@ Poznaj członków partii D3SIGN 3! Jesteśmy pozytywnymi, chętnymi do działani
     <div class="osoba">
       <img src="person.webp"></img>
       <div class="stanowisko">Sekretarz</div>
-      <div class="opis">Imię<br><b>Nazwisko</b></div>
+      <div class="opis">Ewelina<br><b>Smutek</b></div>
     </div>
     <div class="osoba">
       <img src="person.webp"></img>
@@ -332,7 +337,7 @@ Poznaj członków partii D3SIGN 3! Jesteśmy pozytywnymi, chętnymi do działani
 <div class="haslo">
 <p style="color:#ff002a">Pozostali Członkowie Partii</p>
 </div>
-<div class="person-box">
+<div class="person-box2">
     <div class="osoba">
       <img src="person.webp"></img>
       <div class="opis">Imię<br><b>Nazwisko</b></div>
