--- a/program.html
+++ b/program.html
@@ -296,12 +296,18 @@ function showMenu() {
 <span style="color:#ff002a">Program Wyborczy</span>
 </div>
 <div class="big">
+Szafki dla wszystkich uczniów</div>
+<div class="akapit">Nie ukrywajmy - wszyscy wiemy, że jednym z największych problemów polskich uczniów, oprócz przeładowanej podstawy programowej, są ciężkie plecaki, pełne podręczników i zeszytów, przez które mamy często chore kręgosłupy. Ale naszym zdaniem ten problem jesteśmy w stanie rozwiązać nawet jako uczniowie, jako Samorząd Uczniowski. Uważamy, że w naszej szkole powinny stanąć szafki. Jest to dziś standard w polskich szkołach, czas na Trójkę!</div>
+<hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
+<div class="big">
 Kontynuacja szkolnego merchu</div>
-<div class="akapit">Masz ochotę na stylową bluzę z logiem Trójki? Odpowiedź nie może być inna niż "tak!" I my to doskonale wiemy. Dlatego gdy zostaniemy Samorządem Uczniowskim, szkolny merch będzie kontynuowany - i to w lepszej odsłonie niż kiedykolwiek wcześniej! Nie pozwólmy, by nasz merch odstawał od innych szkół średnich. Z nowym wzorem Trójka będzie wyznacznikiem młodzieżowej mody, a przecież Trójka to wy! Wybierz D3SIGN 3, a staniesz się wzorem dla rówieśników!</div>
+<div class="akapit">Jako partia kandydująca w wyborach na Samorząd Uczniowski naszej szkoły, nie mamy żadnych wątpliwości. Gdy zostaniemy Samorządem, szkolny merch będzie kontynuowany. Oczywiście, zrobimy wszystko, by był on jeszcze lepszy niż w poprzednich latach. W końcu to coś więcej niż zwykłe bluzy!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
 <div class="big">Powołanie Rzecznika Praw Ucznia</div>
 <div class="akapit">Spotkało Cię coś niemiłego ze strony nauczyciela lub innego ucznia? Nauczyciel ma do Ciebie nieuzasadnione uprzedzenia, ktoś Cię prześladuje, a może wychowawca nie chce słuchać propozycji uczniów? W takiej sytuacji zawsze pomoże Ci Rzecznik Praw Ucznia! Gdy zostaniemy Samorządem Uczniowskim, jego powołanie będzie jedną z naszych pierwszych decyzji. Dlatego nie zwlekaj, chodź na wybory i zagłosuj za swoimi prawami! Zagłosuj na D3SIGN 3!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
+<div class="big">Plebiscyt na najlepszego mema z papajem</div>
+<div class="akapit">2137, nic dodać, nic ująć.</div>
 <div class="big">Turniej e-sportowy</div>
 <div class="akapit">Lubisz e-sporty i chcesz się w nich zmierzyć z innymi Trójkowiczami? Jesteś fanem LOL-a, Counter Strike-a czy może Minecrafta? Turniej e-sportowy to z pewnością coś dla Ciebie! A gdy nasz turniej już się ziści, to może uda się zorganizować międzyszkolne zawody? Podoba Ci się ten pomysł? Głosuj na D3SIGN 3 i wygrajmy razem tą wyborczą grę - zwyciężymy razem, dla Trójki!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
@@ -314,6 +320,8 @@ Kontynuacja szkolnego merchu</div>
 <div class="big">Współpraca z MSK i innymi organizacjami pozarządowymi</div>
 <div class="akapit">Sprawa zmian klimatycznych leży Ci na sercu i chcesz, by Samorząd dawał z siebie ile się da, by przeciwstawić się bezczynności władz w tej kwestii? Chcesz współpracy szkoły z MSK, edukacji klimatycznej i różnych wspólnych akcji? A może zależy Ci także na Samorządzie współpracującym z innymi organizacjami pozarządowymi, takimi jak na przykład Tęczowe Opole? W takim razie wiedz, że nam nie jest obojętnie, w jakim kraju żyjemy i współpraca z NGO-sami to dla nas podstawa!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
+<div class="big">Mem miesiąca</div>
+<div class="akapit">Jeśli zwyciężymy te wybory, jedną z naszych inicjatyw będzie comiesięczny konkurs na najlepszego mema, do którego będzie mógł zostać zgłoszony każdy mem zrobiony przez uczniów naszej szkoły. Wszystko będzie się odbywało na naszym fanpage'u na Facebooku. To jak, trójkowi memiarze, gotowi do zabawy?</div>
 <div class="big">Konsultacje z uczniami i referenda w spornych sprawach</div>
 <div class="akapit">Sprawa jest sporna, a głosy podzielone. Samorząd nie wie, co ma w takiej sytuacji zrobić. Jak rozwiązać ten problem? Dla nas odpowiedź jest oczywista, a brzmi ona "demokracja"! W sprawach spornych, w których uczniowie mają podzielone zdanie, proponujemy referenda. Oczywiście, nie przy okazji każdej błahej sprawy, ale gdy ma ona rzeczywiście znaczenie dla Waszego dobra. To jak, demokracja jest dla Ciebie ważna? Więc głosuj na D3SIGN 3!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
