--- a/program.html
+++ b/program.html
@@ -308,6 +308,7 @@ Kontynuacja szkolnego merchu</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
 <div class="big">Plebiscyt na najlepszego mema z papajem</div>
 <div class="akapit">2137, nic dodać, nic ująć.</div>
+<hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
 <div class="big">Turniej e-sportowy</div>
 <div class="akapit">Lubisz e-sporty i chcesz się w nich zmierzyć z innymi Trójkowiczami? Jesteś fanem LOL-a, Counter Strike-a czy może Minecrafta? Turniej e-sportowy to z pewnością coś dla Ciebie! A gdy nasz turniej już się ziści, to może uda się zorganizować międzyszkolne zawody? Podoba Ci się ten pomysł? Głosuj na D3SIGN 3 i wygrajmy razem tą wyborczą grę - zwyciężymy razem, dla Trójki!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
@@ -322,6 +323,7 @@ Kontynuacja szkolnego merchu</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
 <div class="big">Mem miesiąca</div>
 <div class="akapit">Jeśli zwyciężymy te wybory, jedną z naszych inicjatyw będzie comiesięczny konkurs na najlepszego mema, do którego będzie mógł zostać zgłoszony każdy mem zrobiony przez uczniów naszej szkoły. Wszystko będzie się odbywało na naszym fanpage'u na Facebooku. To jak, trójkowi memiarze, gotowi do zabawy?</div>
+<hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
 <div class="big">Konsultacje z uczniami i referenda w spornych sprawach</div>
 <div class="akapit">Sprawa jest sporna, a głosy podzielone. Samorząd nie wie, co ma w takiej sytuacji zrobić. Jak rozwiązać ten problem? Dla nas odpowiedź jest oczywista, a brzmi ona "demokracja"! W sprawach spornych, w których uczniowie mają podzielone zdanie, proponujemy referenda. Oczywiście, nie przy okazji każdej błahej sprawy, ale gdy ma ona rzeczywiście znaczenie dla Waszego dobra. To jak, demokracja jest dla Ciebie ważna? Więc głosuj na D3SIGN 3!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
@@ -336,9 +338,6 @@ Kontynuacja szkolnego merchu</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
 <div class="big">Koło Fotograficzne i wystawy fotografii</div>
 <div class="akapit">Uwielbiasz robić zdjęcia i chcesz poznać ludzi o podobnej pasji? Uważasz, że nasz szkolny korytarz jest zbyt szary i kilka cudownych zdjęć znacznie by go poprawiło? Zapewne spodoba Ci się więc nasz pomysł na koło fotograficzne i wystawy fotografii, które miałyby miejsce na tablicach na naszym szkolnym korytarzu. Samorząd Uczniowski jest potrzebny po to, by nam wszystkim żyło się lepiej, a czyż nieco kolorów w naszym liceum nie poprawiłoby naszego samopoczucia i nie sprawiłoby, że lepiej czulibyśmy się w szkole?</div>
-<hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Noc w szkole w Halloween</div>
-<div class="akapit">Nie boisz się nocnej integracji w szkole i halloweenowych zabaw? Lubisz się przebierać za upiorne postacie? Więc zapewne ucieszyłbyś się z organizacji nocowania w szkole w Halloween! Jeśli podoba Ci się ten pomysł, to zagłosuj na D3SIGN 3, zrób zapasy cukierków i szykuj swój przerażający kostium!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
 <div class="big">Bal karnawałowy, wybory miss i mistera szkoły</div>
 <div class="akapit">Uwielbiasz taniec? Chcesz zostać najpiękniejszą bądź najprzystojniejszą osobą w szkole? Oto nasza propozycja: bal oraz wybory miss i mistera szkoły! Może to ty zwyciężysz? Jedno jest pewne - cała Trójka będzie zwycięzcami, gry wybory wygra D3SIGN 3!</div>
@@ -378,7 +377,6 @@ Kontynuacja szkolnego merchu</div>
                     <h3 class="mt-3">Kontakt</h3>
                     <ul class="list-unstyled">
                         <li><a href="mailto:d3sign3@outlook.com">E-mail:<br>d3sign3@outlook.com</a></li>
-                        <li><span style="color:#ffe100">Telefon:<br>+48 999 999 999</span></li>
                     </ul>
                 </div>
             </div>
@@ -387,7 +385,7 @@ Kontynuacja szkolnego merchu</div>
                 <div class="as-footer-box mt-4">
                     <h3 class="mt-3">Social Media</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
+                        <li><a href="https://www.facebook.com/D3sign-3-104267282038471/"><i class="fa fa-facebook"></i> Facebook</a></li>
                     </ul>
                 </div>
             </div>
