--- a/onas.html
+++ b/onas.html
@@ -11,7 +11,7 @@ body
 }
 .person-box{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(5%, auto);
     margin-left: 5%;
@@ -309,7 +309,7 @@ Poznaj członków partii D3SIGN 3! Jesteśmy pozytywnymi, chętnymi do działani
 </div>
   <div class ="person-box2">
      <div class="osoba">
-         <img src="person.webp"></img>
+         <img src="af.png"></img>
          <div class="stanowisko">Przewodniczący Partii</div>
          <div class="opis">Aleksandra<br><b>Filipowska</b></div>
     </div>
@@ -324,38 +324,13 @@ Poznaj członków partii D3SIGN 3! Jesteśmy pozytywnymi, chętnymi do działani
       <div class="opis">Imię<br><b>Nazwisko</b></div>
     </div>
     <div class="osoba">
-      <img src="person.webp"></img>
+      <img src="es.png"></img>
       <div class="stanowisko">Sekretarz</div>
       <div class="opis">Ewelina<br><b>Smutek</b></div>
     </div>
     <div class="osoba">
       <img src="person.webp"></img>
       <div class="stanowisko">Rzecznik Partii</div>
-      <div class="opis">Imię<br><b>Nazwisko</b></div>
-    </div>
-</div>
-<div class="haslo">
-<p style="color:#ff002a">Pozostali Członkowie Partii</p>
-</div>
-<div class="person-box2">
-    <div class="osoba">
-      <img src="person.webp"></img>
-      <div class="opis">Imię<br><b>Nazwisko</b></div>
-    </div>
-    <div class="osoba">
-      <img src="person.webp"></img>
-      <div class="opis">Imię<br><b>Nazwisko</b></div>
-    </div>
-    <div class="osoba">
-      <img src="person.webp"></img>
-      <div class="opis">Imię<br><b>Nazwisko</b></div>
-    </div>
-    <div class="osoba">
-      <img src="person.webp"></img>
-      <div class="opis">Imię<br><b>Nazwisko</b></div>
-    </div>
-    <div class="osoba">
-      <img src="person.webp"></img>
       <div class="opis">Imię<br><b>Nazwisko</b></div>
     </div>
 </div>
@@ -388,7 +363,6 @@ Chcesz do nas dołączyć? Napisz do nas!
                     <h3 class="mt-3">Kontakt</h3>
                     <ul class="list-unstyled">
                         <li><a href="mailto:d3sign3@outlook.com">E-mail:<br>d3sign3@outlook.com</a></li>
-                        <li><span style="color:#ffe100">Telefon:<br>+48 999 999 999</span></li>
                     </ul>
                 </div>
             </div>
@@ -397,7 +371,7 @@ Chcesz do nas dołączyć? Napisz do nas!
                 <div class="as-footer-box mt-4">
                     <h3 class="mt-3">Social Media</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
+                        <li><a href="https://www.facebook.com/D3sign-3-104267282038471/"><i class="fa fa-facebook"></i> Facebook</a></li>
                     </ul>
                 </div>
             </div>
