--- a/kontakt.html
+++ b/kontakt.html
@@ -358,7 +358,6 @@ function showMenu() {
                     <h3 class="mt-3">Kontakt</h3>
                     <ul class="list-unstyled">
                         <li><a href="mailto:d3sign3@outlook.com">E-mail:<br>d3sign3@outlook.com</a></li>
-                        <li><span style="color:#ffe100">Telefon:<br>+48 999 999 999</span></li>
                     </ul>
                 </div>
             </div>
@@ -367,7 +366,7 @@ function showMenu() {
                 <div class="as-footer-box mt-4">
                     <h3 class="mt-3">Social Media</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
+                        <li><a href="https://www.facebook.com/D3sign-3-104267282038471/"><i class="fa fa-facebook"></i> Facebook</a></li>
                     </ul>
                 </div>
             </div>
