--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@ function showMenu() {
 </script>
 </head>
 <body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v12.0" nonce="85Tv1b8l"></script>
 <div id="menu" class="menu">
 	<button type="button" id="show-menu" class="show-menu" onclick="showMenu();">
 		<i class="menu-bar menu-bar-1"></i>
@@ -294,7 +296,7 @@ Kim jesteśmy?
 Koniecznie zajrzyj na naszego Facebooka! Znajdziesz na nim newsy dotyczące kampanii wyborczej, a także z życia szkoły.
 </div>
 <div class="akapit">
-UWAGA UWAGA, TU BĘDZIE SPECJALNY LINK DO FACEBOOKA PARTII
+<div class="fb-page" data-href="https://www.facebook.com/D3sign-3-104267282038471/" data-tabs="timeline" data-width="500" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/D3sign-3-104267282038471/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/D3sign-3-104267282038471/">D3sign 3</a></blockquote></div>
 </div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
 <div class="big">
@@ -338,7 +340,6 @@ Do naszej partii D3SIGN 3 należy wiele świetnych osób. Chcesz nas poznać i p
                     <h3 class="mt-3">Kontakt</h3>
                     <ul class="list-unstyled">
                         <li><a href="mailto:d3sign3@outlook.com">E-mail:<br>d3sign3@outlook.com</a></li>
-                        <li><span style="color:#ffe100">Telefon:<br>+48 999 999 999</span></li>
                     </ul>
                 </div>
             </div>
@@ -347,7 +348,7 @@ Do naszej partii D3SIGN 3 należy wiele świetnych osób. Chcesz nas poznać i p
                 <div class="as-footer-box mt-4">
                     <h3 class="mt-3">Social Media</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
+                        <li><a href="https://www.facebook.com/D3sign-3-104267282038471/"><i class="fa fa-facebook"></i> Facebook</a></li>
                     </ul>
                 </div>
             </div>
