--- a/kontakt.html
+++ b/kontakt.html
@@ -316,10 +316,10 @@ function showMenu() {
   <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
   <div class="back2">
     <div class="new1">
-      Nasz Rzecznik
+      Nasz Sekretarz
     </div>
     <div class="new2">
-      Imię Nazwisko<br>+48 999 999 999<br><a href="prywatnymailrzecznika@domena.com"><br>prywatnymailrzecznika@domena.com</a>
+      Ewelina Smutek<br>+783 162 941<br><a href="mailto:ewelinasmutek12@gmail.com"><br>ewelinasmutek12@gmail.com</a>
     </div>
   </div>
   <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
@@ -328,7 +328,7 @@ function showMenu() {
       Nasz profil na Facebooku
     </div>
     <div class="new2">
-    <a href="https://facebook.com/d3sign-3"><br>Link do naszego Facebooka</a>
+    <a href="https://www.facebook.com/D3sign-3-104267282038471/"><br>Link do naszego Facebooka</a>
     </div>
   </div>
 </div>
