--- a/program.html
+++ b/program.html
@@ -144,6 +144,7 @@ ul {list-style:none;}
   font-size: 20px;
   margin-left: 5vw;
   margin-right: 5vw;
+  margin-bottom: 30px;
   text-shadow: 0px 0px 4px black;
 }
 .haslo {
@@ -296,61 +297,51 @@ function showMenu() {
 <span style="color:#ff002a">Program Wyborczy</span>
 </div>
 <div class="big">
-Szafki dla wszystkich uczniów</div>
+1. Szafki dla wszystkich uczniów</div>
 <div class="akapit">Nie ukrywajmy - wszyscy wiemy, że jednym z największych problemów polskich uczniów, oprócz przeładowanej podstawy programowej, są ciężkie plecaki, pełne podręczników i zeszytów, przez które mamy często chore kręgosłupy. Ale naszym zdaniem ten problem jesteśmy w stanie rozwiązać nawet jako uczniowie, jako Samorząd Uczniowski. Uważamy, że w naszej szkole powinny stanąć szafki. Jest to dziś standard w polskich szkołach, czas na Trójkę!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
 <div class="big">
-Kontynuacja szkolnego merchu</div>
-<div class="akapit">Jako partia kandydująca w wyborach na Samorząd Uczniowski naszej szkoły, nie mamy żadnych wątpliwości. Gdy zostaniemy Samorządem, szkolny merch będzie kontynuowany. Oczywiście, zrobimy wszystko, by był on jeszcze lepszy niż w poprzednich latach. W końcu to coś więcej niż zwykłe bluzy!</div>
+2. Kontynuacja szkolnego merchu</div>
+<div class="akapit">Jako partia kandydująca w wyborach do Rady Uczniowskiej Samorządu Szkolnego naszej szkoły, nie mamy żadnych wątpliwości. Gdy zostaniemy Samorządem, szkolny merch będzie kontynuowany. Oczywiście, zrobimy wszystko, by był on jeszcze lepszy niż w poprzednich latach. W końcu to coś więcej niż zwykłe bluzy, to element naszej trójkowej tożsamości!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Powołanie Rzecznika Praw Ucznia</div>
-<div class="akapit">Spotkało Cię coś niemiłego ze strony nauczyciela lub innego ucznia? Nauczyciel ma do Ciebie nieuzasadnione uprzedzenia, ktoś Cię prześladuje, a może wychowawca nie chce słuchać propozycji uczniów? W takiej sytuacji zawsze pomoże Ci Rzecznik Praw Ucznia! Gdy zostaniemy Samorządem Uczniowskim, jego powołanie będzie jedną z naszych pierwszych decyzji. Dlatego nie zwlekaj, chodź na wybory i zagłosuj za swoimi prawami! Zagłosuj na D3SIGN 3!</div>
+<div class="big">3. Powołanie Rzecznika Praw Ucznia</div>
+<div class="akapit">Często nie znamy Statutu Szkoły i dlatego łamane są nasze prawa. My jako D3SIGN 3 chcielibyśmy przeciwdziałać takiej niewiedzy, a jednocześnie chronić prawa uczniów naszej szkoły. Rzecznik Praw Ucznia pomagałby także łagodzić konflikty z nauczycielami.</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Plebiscyt na najlepszego mema z papajem</div>
-<div class="akapit">2137, nic dodać, nic ująć.</div>
+<div class="big">4. Turniej e-sportowy</div>
+<div class="akapit">W czasie wolnym od nauki wielu z nas lubi grać w różne gry, więc proponujemy zorganizować turniej e-sportowy, składający się z różnych "dyscyplin", jak na przykład LOL, Minecraft, Valorant czy CS:GO. Możliwe, że udało by się nawet rozegrać mistrzostwa o skali międzyszkolnej, z drużynami z innych opolskich szkół średnich.</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Turniej e-sportowy</div>
-<div class="akapit">Lubisz e-sporty i chcesz się w nich zmierzyć z innymi Trójkowiczami? Jesteś fanem LOL-a, Counter Strike-a czy może Minecrafta? Turniej e-sportowy to z pewnością coś dla Ciebie! A gdy nasz turniej już się ziści, to może uda się zorganizować międzyszkolne zawody? Podoba Ci się ten pomysł? Głosuj na D3SIGN 3 i wygrajmy razem tą wyborczą grę - zwyciężymy razem, dla Trójki!</div>
+<div class="big">5. Współpraca z MSK i innymi organizacjami pozarządowymi</div>
+<div class="akapit">Cenimy sobie działania NGO-sów takich, jak na przykład Młodzieżowy Strajk Klimatyczny czy Tęczowe Opole, więc jako Rada Samorządu organizowalibyśmy wraz z nimi różne akcje. Jakie? Na przykład sprzątanie Ziemi, live z okazji Tęczowego Piątku. Razem możemy więcej!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Regularne spotkania z Samorządami Klasowymi, wzajemna wymiana opinii i pomoc</div>
-<div class="akapit">W partii D3SIGN 3 nie wątpimy, że Przewodniczący Klas to zawodowcy. Uważamy też, że ich głos, pośredniczący w kontaktach z uczniami, powinien decydujący wpływ na podejmowanie decyzji przez Samorząd Uczniowski. W końcu to Wy jesteście Trójką, Wasz głos ma znaczenie. Dlatego postulujemy, by spotkania Samorządu Uczniowskiego i Przewodniczących Klas odbywały się regularnie. Dawałyby nam one platformę do zdobywania doświadczenia - obustronnie, bo nikt nie wie wszystkiego. Tak pozyskiwana wiedza jest kluczowa. To jak, chcesz projektu pozwalającego na ścisłą współpracę w obrębie uczniowskich organów szkoły? Więc głosuj na D3SIGN 3!</div>
+<div class="big">6. Spotkania online z ciekawymi osobistościami</div>
+<div class="akapit">Wszyscy wiemy, że spotkania ze znanymi opolanami, szczególnie absolwentami Trójki, to sama przyjemność, więc chcielibyśmy organizować je regularnie i zapraszać osoby zajmujące się różnorodnymi dziedzinami.</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Ciekawe ankiety wśród uczniów i wyniki na tablicach na korytarzu</div>
-<div class="akapit">"Czym się interesujesz?", "Jakie lubisz gry", "Jakie znasz języki obce?", "Których nauczycieli lubisz najbardziej?" - lubisz ankiety? Chcesz się przekonać, co uczniowie Trójki sądzą na różnorodne tematy? A może masz pomysł na własne pytania, ale nie wiesz, jak to zrealizować? D3SIGN 3 jak zwykle przychodzi Wam z pomocą i postulatem, który z pewnością zadowoli każdego - ankietami przeprowadzanymi wśród uczniów przez Internet, na naszej stronie na Facebooku! Oczywiście, wszystko byłoby anonimowe. Wyniki wieszalibyśmy na tablicach na szkolnym korytarzu. To jak, chcesz poznać naszą Trójkową społeczność od zupełnie nowej strony? To prostsze niż myślisz, wystarczy oddać już niedługo głos na naszą partię!</div>
+<div class="big">7. Akcje z samorządami uczniowskimi innych szkół średnich</div>
+<div class="akapit">W naszej partii wychodzimy z założenia, że łącząc nasze siły, możemy więcej, a wypadkowa naszych starań jest w stanie zrobić wszystko, więc chcielibyśmy organizować akcje z innymi Radami Samorządów Szkolnych, takie jak na przykład speed dating, turniej e-sportowy czy sprzątanie świata.</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Współpraca z MSK i innymi organizacjami pozarządowymi</div>
-<div class="akapit">Sprawa zmian klimatycznych leży Ci na sercu i chcesz, by Samorząd dawał z siebie ile się da, by przeciwstawić się bezczynności władz w tej kwestii? Chcesz współpracy szkoły z MSK, edukacji klimatycznej i różnych wspólnych akcji? A może zależy Ci także na Samorządzie współpracującym z innymi organizacjami pozarządowymi, takimi jak na przykład Tęczowe Opole? W takim razie wiedz, że nam nie jest obojętnie, w jakim kraju żyjemy i współpraca z NGO-sami to dla nas podstawa!</div>
+<div class="big">8. Szkolny kiermasz używanych książek</div>
+<div class="akapit">Wielu z nas ma w domu książki w idealnym stanie, z których już nie korzysta. Ale przecież bez względu na to, czy jest to podręcznik, czy jednokrotnie przeczytana powieść, nie może się zmarnować. Dlatego postulujemy organizację szkolnego kiermaszu używanych książek. Kto kocha wiedzę, ten kocha książki, a kto kocha książki, ten chce, by dotarły do jak największej liczby osób!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Mem miesiąca</div>
-<div class="akapit">Jeśli zwyciężymy te wybory, jedną z naszych inicjatyw będzie comiesięczny konkurs na najlepszego mema, do którego będzie mógł zostać zgłoszony każdy mem zrobiony przez uczniów naszej szkoły. Wszystko będzie się odbywało na naszym fanpage'u na Facebooku. To jak, trójkowi memiarze, gotowi do zabawy?</div>
+<div class="big">9. Bal karnawałowy, wybory miss i mistera szkoły</div>
+<div class="akapit"></div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Konsultacje z uczniami i referenda w spornych sprawach</div>
-<div class="akapit">Sprawa jest sporna, a głosy podzielone. Samorząd nie wie, co ma w takiej sytuacji zrobić. Jak rozwiązać ten problem? Dla nas odpowiedź jest oczywista, a brzmi ona "demokracja"! W sprawach spornych, w których uczniowie mają podzielone zdanie, proponujemy referenda. Oczywiście, nie przy okazji każdej błahej sprawy, ale gdy ma ona rzeczywiście znaczenie dla Waszego dobra. To jak, demokracja jest dla Ciebie ważna? Więc głosuj na D3SIGN 3!</div>
+<div class="big">10. Ciekawe ankiety wśród uczniów i wyniki na tablicach na korytarzu</div>
+<div class="akapit"></div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Spotkania online z ciekawymi osobistościami</div>
-<div class="akapit">Chcesz poznać znane osoby i zadać im pytania co do ich pracy? Dziennikarz, polityk, sportowiec, pisarz, a może naukowiec? D3SIGN 3 przychodzi Ci z pomocą i postuluje spotkania z ciekawymi osobami, szczególnie z naszego regionu! Odbywałyby się one online, a udział mógłby w nich wziąć każdy. Miałyby formę live'a na Facebooku. Podoba Ci się ten pomysł? Więc zapewne już wiesz, na kogo oddać głos w nadchodzących wyborach!</div>
+<div class="big">11. Zawody międzyklasowe w sportach zespołowych</div>
+<div class="akapit">Sport to zdrowie, więc proponujemy, by wiosną odbyły się w Trójce zawody sportowe, a najlepsze klasy zostałyby nagrodzone!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Akcje z samorządami uczniowskimi innych szkół średnich</div>
-<div class="akapit">Poczta walentynkowa, turniej gamingowy, akcja sprzątania miasta, czy może coś zupełnie innego? Co uważasz o wspólnych akcjach Samorządów Uczniowskich opolskich szkół? Jak wszyscy doskonale wiemy, razem można zrobić znacznie więcej niż samemu, dlatego naszym zdaniem kooperacja to podstawa! Jako Samorząd Uczniowski LO III chcielibyśmy nawiązać ścisłą współpracę z Samorządami innych szkół, by organizować razem różne akcje i wzajemnie się wspierać w poprawianiu życia opolskich uczniów.</div>
+<div class="big">12. Obchody różnych dni tematycznych</div>
+<div class="akapit"></div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Szkolny kiermasz książek</div>
-<div class="akapit">Masz w domu tyle książek, że nie masz gdzie ich zmieścić, ale jesteś molem książkowym i wciąż masz potrzebę kupowania nowych? Chcesz zyskać pieniądze na kolejne? A może zależy Ci na kupnie trudno dostępnej książki? W takim razie na pewno spodoba Ci się nasz pomysł na szkolny kiermasz książek! Jedni sprzedają, inni kupują, a wszyscy są zadowoleni!</div>
+<div class="big">13. Regularne spotkania z Samorządami Klasowymi, wzajemna wymiana opinii i pomoc</div>
+<div class="akapit"></div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Koło Fotograficzne i wystawy fotografii</div>
-<div class="akapit">Uwielbiasz robić zdjęcia i chcesz poznać ludzi o podobnej pasji? Uważasz, że nasz szkolny korytarz jest zbyt szary i kilka cudownych zdjęć znacznie by go poprawiło? Zapewne spodoba Ci się więc nasz pomysł na koło fotograficzne i wystawy fotografii, które miałyby miejsce na tablicach na naszym szkolnym korytarzu. Samorząd Uczniowski jest potrzebny po to, by nam wszystkim żyło się lepiej, a czyż nieco kolorów w naszym liceum nie poprawiłoby naszego samopoczucia i nie sprawiłoby, że lepiej czulibyśmy się w szkole?</div>
+<div class="big">14. Koło Fotograficzne i wystawy fotografii</div>
+<div class="akapit">Nasze szkolne korytarze wyglądałyby o wiele lepiej, gdyby ozdobione były zdjęciami, na dodatek wykonanymi przez naszych uczniów. Teraz są puste, aż szkoda by było nie uczynić ich piękniejszymi!</div>
 <hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Bal karnawałowy, wybory miss i mistera szkoły</div>
-<div class="akapit">Uwielbiasz taniec? Chcesz zostać najpiękniejszą bądź najprzystojniejszą osobą w szkole? Oto nasza propozycja: bal oraz wybory miss i mistera szkoły! Może to ty zwyciężysz? Jedno jest pewne - cała Trójka będzie zwycięzcami, gry wybory wygra D3SIGN 3!</div>
-<hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Zawody międzyklasowe w sportach zespołowych</div>
-<div class="akapit">Jako że ważne jest dla nas zdrowie i sprawność fizyczna, postulujemy zorganizowanie międzyklasowych zawodów w różnych sportach zespołowych, między innymi w piłce nożnej, siatkówce, koszykówce oraz sztefecie. Zdrowie jest przecież najważniejsze! Oprócz przedniej zabawy i możliwości konkurowania z innymi, mamy jeszcze jedną propozycję - zwycięzka klasa zostałaby nagrodzona!</div>
-<hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Obchody różnych dni</div>
-<div class="akapit">Przez cały rok możemy znaleźć w kalendarzu wiele świąt: Dzień Chłopaka, Dzień Tolerancji, Walentynki, Dzień Kobiet... A to tylko namiastka tych wszystkich ważnych dni! Uważamy, że Samorząd Uczniowski potrzebny jest między innymi po to, żeby umilić Wam pobyt w szkole organizacją ciekawych obchhodów różnorodnych świąt. My jako D3SIGN 3 bez wątpienia byśmy o tym nie zapomnieli, dlatego jeśli zależy Ci na obchodach dni tematycznych, to spokojnie możesz na nas zagłosować i gwarantujemy - nie pożałujesz!</div>
-<hr style="border: 0px; background: #ff002a; height: 1px; width: 80px;">
-<div class="big">Quiz z wiedzy ogólnej z okazji dnia dziecka - uczniowie vs nauczyciele</div>
-<div class="akapit">Ciekaw jesteś, czy byłbyś w stanie pokonać nauczycieli w wiedzy ogólnej? Chcesz to sprawdzić? W takim razie z pewnością ucieszy Cię ten pomysł, który zrealizowany zostałby w okolicach Dnia Dziecka. A akurat wtedy, ponieważ każdy z nas, bez względu na wiek, jest choć trochę dzieckiem! Zorganizowalibyśmy jako Samorząd Uczniowski quiz, w którym wzieliby udział uczniowie i nauczyciele. Pytania dotyczyłyby przeróżnych dziedzin - od chemii po język polski, od informatyki po filozofię. To jak, nie boisz się podjąć wyzwania? Więc oddaj głos na D3SIGN 3!</div>
-</div>
+<div class="big">15. Konsultacje z uczniami w sprawie przerw muzycznych</div>
+<div class="akapit">Z jednej strony wszyscy lubimy muzykę, lecz z drugiej nie zawsze się zgadzamy w tym, czego posłuchać i niektórzy woleliby pouczyć się na przerwie w ciszy. Rozwiązaniem tej sytuacji naszym zdaniem byłby rozsądny kompromis, jakim jest referendum. To Wy jesteście Trójką, więc to Wy powinniście podjąć decyzję!</div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <footer id="as-footer">
